# sentinel

./: .env.example  .gitignore  ARCHITECTURE_DECISIONS.md  CODEBASE_GUIDE.md  Dockerfile  NEW_DEVELOPER_GUIDE.md  QUICK_START.md  README.md  TRADEOFFS.md  TROUBLESHOOTING.md  TUTORIAL.md  WALKTHROUGH.md  docker-compose.yml  docker_wrapper_demo.sh  requirements.txt
.github/workflows/: ci.yml
agent/: README.md  install.sh  sentinel-wrapper.sh
day_wise/: 2026-02-14_Review.md
docs/: ARCHITECTURE.md  DECISIONS.md  IMMUTABLE_LOGS.md
sdk/: README.md  pyproject.toml
sdk/src/sentinel_sdk/: __init__.py  client.py
src/: main.py
src/audit/: router.py  service.py
src/auth/: router.py
src/core/: auth_dependency.py  config.py  security.py
src/db/: models.py  session.py
src/policy/: engine.py
tests/: stress_test.py  verify_chain.py
