[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel-sdk"
version = "0.1.0"
authors = [
  { name="Sentinel Team", email="security@good-as-three.com" },
]
description = "The official Python client for Sentinel Immutable Audit Logs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.20.0",
]

[project.urls]
"Homepage" = "https://github.com/good-as-three/sentinel"
